Fixed issue with offset and grid with no gap
- Fixed an issue where the .offset utility classes don't work if the grid has no gap

--- a/main/assets/css/base/_grid-layout.scss
+++ b/main/assets/css/base/_grid-layout.scss
@@ -76,12 +76,19 @@ $grid-columns: 12 !default;
 
 .grid {
   --gap: 0px;
+  --offset: var(--gap);
   display: flex;
   flex-wrap: wrap;
 
   > * {
     flex-basis: 100%;
     max-width: 100%;
+  }
+  
+  @supports (--css: variables) {
+    > *[class*="offset-"] {
+      margin-left: var(--offset);
+    }
   }
 }
 
